--- a/GUI/MADSMetadata/mainwindow.ui
+++ b/GUI/MADSMetadata/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Miroscic metadata agent</string>
+   <string>MADS metadata agent</string>
   </property>
   <property name="unifiedTitleAndToolBarOnMac">
    <bool>true</bool>
@@ -419,7 +419,7 @@
      <x>0</x>
      <y>0</y>
      <width>828</width>
-     <height>24</height>
+     <height>43</height>
     </rect>
    </property>
   </widget>
