--- a/GUI/MADSMetadata/mainwindow.ui
+++ b/GUI/MADSMetadata/mainwindow.ui
@@ -336,6 +336,9 @@
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <widget class="QPushButton" name="markInButton">
+        <property name="toolTip">
+         <string>Message published to the agent_event topic</string>
+        </property>
         <property name="text">
          <string>Mark in</string>
         </property>
@@ -346,6 +349,9 @@
       </item>
       <item>
        <widget class="QPushButton" name="immediateMarkButton">
+        <property name="toolTip">
+         <string>Message published to the agent_event topic</string>
+        </property>
         <property name="text">
          <string>Bare mark</string>
         </property>
@@ -356,6 +362,9 @@
       </item>
       <item>
        <widget class="QPushButton" name="markOutButton">
+        <property name="toolTip">
+         <string>Message published to the agent_event topic</string>
+        </property>
         <property name="text">
          <string>Mark out</string>
         </property>
